add notebook for load data into a vector index

--- a/ai-search/ai_search_embeddings.ipynb
+++ b/ai-search/ai_search_embeddings.ipynb
@@ -15,12 +15,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load Environment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"This is a test\")"
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "aoai_endpoint = os.getenv('AOAI_ENDPOINT')\n",
+    "aoai_api_key = os.getenv('AOAI_API_KEY')\n",
+    "aoai_api_version = os.getenv('API_VERSION')\n",
+    "aoai_deployment = os.getenv('DEPLOYMENT_NAME')\n",
+    "\n",
+    "ai_search_endpoint = os.getenv('AI_SEARCH_ENDPOINT')\n",
+    "ai_search_key = os.getenv('AI_SEARCH_KEY')\n",
+    "ai_search_index_name = os.getenv('AI_SEARCH_INDEX')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create Vector Store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.core.credentials import AzureKeyCredential\n",
+    "from azure.search.documents import SearchClient\n",
+    "\n",
+    "search_client = SearchClient(\n",
+    "  endpoint=ai_search_endpoint,\n",
+    "  index_name=ai_search_index_name,\n",
+    "  credential=AzureKeyCredential(ai_search_key)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from openai import AzureOpenAI\n",
+    "\n",
+    "client = AzureOpenAI(\n",
+    "  azure_deployment=aoai_deployment,\n",
+    "  api_version=aoai_api_version,\n",
+    "  azure_endpoint=aoai_endpoint,\n",
+    "  api_key=aoai_api_key\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pages = []\n",
+    "\n",
+    "with open(\"../data/what_is_ai_studio.md\", \"r\") as file:\n",
+    "  from langchain_text_splitters import CharacterTextSplitter\n",
+    "\n",
+    "  text_splitter = CharacterTextSplitter(chunk_size=300, chunk_overlap=30)\n",
+    "  pages = text_splitter.split_text(file.read())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "documents = []\n",
+    "\n",
+    "for item in pages:\n",
+    "  doc = {\n",
+    "    \"id\": str(uuid.uuid4()),\n",
+    "    \"content\": item,\n",
+    "    \"content_vector\": client.embeddings.create(input=item, model=aoai_deployment).data[0].embedding\n",
+    "  }\n",
+    "  documents.append(doc)\n",
+    "\n",
+    "result = search_client.upload_documents(documents=documents)"
    ]
   }
  ],
